static/css/style.css
/* general style for fadeout messages */

.fadeout{
    animation: neon 3s infinite alternate;
}

/* ------------------ base.html custom CSS *-----------------------*/
html,
body,
.navbar {
    padding:0;
    margin:0;
}

body {
    padding-top:85px;
    min-height:100vh;
    display: flex;
    flex-direction: column;
    color:white;
    background: black;
    font-family: 'Sedgwick Ave',cursive;
}

.navbar {
    position: fixed;
    top: 0;
    left:0;
}

/* navbar style */
nav * {
    font-family: 'DEATH CROW', sans-serif;
    margin:0;
    padding:0;
}

.nav-link,
.nav-link a,
.nav-item,
#home,
.dropdown-item,
#offcanvasNavbarLabel{
    font-size: 25px;
    color: white;
}

.nav-link .fa-facebook-messenger{
    font-size: 20px;
    padding-left:5px;
}

/* pseudo styling */
.nav-link:hover,
.nav-link a:hover,
.nav-item:hover,
#home:hover,
.dropdown-item:hover {
    color: rgb(23, 224, 23);
    background: transparent;
}

.nav-link:focus,
.nav-link a:focus,
.nav-item:focus,
#home:focus,
.dropdown-item:focus,
.dropdownmenu.show:focus,
.nav-item.dropdown>.nav-link:focus {
    color: rgb(23, 224, 23);
}

#navbar,
.offcanvas-header,
.offcanvas-body,
.dropdown-menu {
    background-color: black;
}


.navbar-toggler,
.btn-close {
    background-color:white;
    border: 1px solid rgb(23, 224, 23);
    margin-right:10px;
}

#logo {
    width: 75px;
    height: 75px;
    border-radius: 50%;
}

/* footer style */

 footer {
     margin-top: auto;
 }

.footer-container{
    background:black;
    color:white;
    text-align:center;
    font-family: 'Sedgwick Ave', cursive;
    padding-top:10px;
}

#banner{
    height:100px;
}

#footer-links{
    list-style: none;
    font-size: 15px;
}

#footer-links li {
    display: inline-block;
    padding:10px;
}

#footer-links li a{
    color: white;
    font-size:20px;
}

#footer-links li a:hover{
    color: rgb(23, 224, 23);
}

.social-footer{
    padding-top:20px;
}

#footer-admin-link{
    width:25px;
    height: 25px;
    border-radius:50%;
}

@media screen and (max-width:570px){
    .social-footer{
        margin: 0 auto;
    }
}

/* -------------- about.html custom css ---------------------------- */

#about-shop-img{
    background-color: black;
    text-align:center;
}

.single-column{
    margin:0;
    padding:0;
    height:auto;
    background: rgba(0,0,0,0.3);
}

#about-info{
    font-family:'Sedgwick Ave', cursive;
    color:white;
    font-size:25px;
    margin-top:10px;
    height: auto;
}

/* header style - took some inspiration from a yotube video */
#about-info > h1{
    font-family: 'DEATH CROW', sans-serif;
    font-size:80px;
    animation: neon 3s infinite alternate;
}

@keyframes neon {
    from,
    to {
        color: white;
        text-shadow: 0 0 10px rgb(23, 224, 23), 0 0 20px rgb(23, 224, 23), 0 0 30px rgb(23, 224, 23), 0 0 40px rgb(23, 224, 23), 0 0 50px rgb(23, 224, 23), 0 0 60px rgb(23, 224, 23), 0 0 70px rgb(23, 224, 23);
    }

    50% {
        color: white;
        text-shadow: none;
    }
}

#contact-icons {
    list-style: none;
    padding: 0;
    margin: 0;
}

#contact-icons li {
    display: inline-block;
    margin-right: 15px;
}

#contact-icons li a {
    color:white;
}

#contact-icons li a:hover{
    color:rgb(23, 224, 23);
}


/* style for 3 columns under the main image */

.about-neon {
    height: auto;
    border: solid 1px rgb(23, 224, 23);
    text-align: center;
    font-family: 'Sedgwick Ave', cursive;
    padding: 0;
    color:white;
    background: rgba(0,0,0,1);
}

.about-neon-open{
    padding:0;
}

.about-neon ul{
    list-style:none;
}

#tatoostyletxt,
.opening-times{
    height:100%;
    padding-top:30px;
}

.opening-times {
    background: rgba(0, 0, 0, 0.5);
}

.opening-times li{
    padding-top:20px;
    font-size: 25px;
}

#tatoostyletxt li{
    font-size:16px;
}

.about-neon-img{
    display: flex;
    overflow: hidden;
}

.autoscroll{
    flex: 0 0 auto;
    width: 100%;
    max-width:100%;
    margin-right:10px;
    height:500px;
}

.hideimg{
    display:none;
}

/* style for the artist columns */

.artist-header{
    text-align: center;
    background-color:black;
    font-family: 'Sedgwick Ave', cursive;
    color:white;
    padding-top:10px;
}

.artist-card-container{
    background-color: black;
    font-family: 'Sedgwick Ave', cursive;
    color: white;
    text-align: center;
}

/* Tarot cards */
.tarot-image{
    width:300px;
}

/* style for the address section */
.address-container{
    color: white;
    font-family: 'Sedgwick Ave', cursive;
    background:url('../images/neondemonshop.jpg');
    background-size:cover;
    text-align:center;
    padding: 30px 0 30px 0;
    border: 1px solid rgb(23, 224, 23);
}

.price-container{
    color: white;
    font-family: 'Sedgwick Ave', cursive;
    text-align: center;
    padding:30px 0 30px 0;
    border: 1px solid rgb(23, 224, 23);
    background: black;
    
}

#address-background h2{
    background:none;
}

#address-background,
#price-background {
    background: rgba(0,0,0,0.5);
}

/* map container */
.map-container{
    border-top: solid 1px rgb(23, 224, 23);
    border-bottom: solid 1px rgb(23, 224, 23);
    padding:0;
}

#find-us-map{
    width:100%;
    height:500px;
}

/* ------------------ reviews.html/reviewform.html custom CSS *-----------------------*/

#reviewformcontainer li{
    list-style: none;
}

#review-container{
    text-align:center;
    margin-top:20px;
}

#review-container h1{
    font-family: 'DEATH CROW',sans-serif;
    animation: neon 3s infinite alternate;
    letter-spacing:2px;
    font-size:80px;
}

#review-links {
    list-style: none;
    padding: 0;
    margin: 0;
}

#review-links li {
    display: inline-block;
    margin-right: 15px;
    font-size:30px;
}

#review-links li a {
    color: white;
}

#review-links li a:hover {
    color: rgb(23, 224, 23);
}

#review-button {
    background: rgba(0, 0, 0, 0.223);
    box-shadow: 0 0 10px rgba(51, 209, 51, 0.5);
    font-family: 'DEATH CROW', sans-serif;
    font-size: 25px;
    border: black solid 1px;
    text-shadow: 3px 3px rgba(0, 0, 0, 0.6);
}

#review-button:hover {
    color: rgba(51, 209, 51);
    border: 1px solid rgb(51, 209, 51);
    box-shadow: 0 0 100px rgb(51, 209, 51);
}

.review-display{
    text-align:center;
}

.review-list{
    list-style: none;
    background: url('../images/small-logo.jpg') no-repeat;
    background-size: contain;
    background-position: center;
    margin: 0;
    padding:0;
    box-shadow: 0 0 20px rgb(51, 209, 51);
    padding-top:10px;
    margin-top:15px;
    width:300px;
}

.review-list li{
    background: rgb(0, 0, 0, 0.6);
}

#reviewcontent{
    font-size:20px;
}

.review-form{
    text-align:center;
    color:white;
    margin-top:40px;
}

#review-p a{
    color:white;
    text-decoration: underline;
    font-weight: 100;
}

#review-p a:hover{
    color:rgb(51, 209, 51);
    text-decoration: underline;
    font-weight: 100;
}

#message-container{
    width:100%;
    height: 100px;
}

/* review form media query */
@media (max-width: 767px) {
    .responsive-textarea {
        width: 100%;
        height: 100px;
    }
}

/* ---------------------------------My reviews page css --------------------*/

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.4);
    box-shadow: 0 0 20px rgb(51, 209, 51);
  }
  
  .modal-content {
    background-color: black;
    color:white;
    margin: 15% auto;
    padding: 20px;
    width: 80%;
    box-shadow: 0 0 20px rgb(51, 209, 51);
  }
  
  .close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
  }

  .button-container{
    text-align:center;
  }

  #confirm-delete, 
  #cancel-delete{
    background: black;
    color: white;
    box-shadow: 0 0 20px rgb(51, 209, 51);
    width:200px;
    margin: 0 auto;
    margin-bottom: 25px;
  }
  
  .close:hover,
  .close:focus,
  #confirm-delete:hover,
  #cancel-delete:hover {
    color:rgb(51, 209, 51);
    text-decoration: none;
    cursor: pointer;
  }
        
/*----------------------------------Gallery.html styles --------------------*/

#gallery-container{
    text-align: center;
    margin-top: 20px;
}

#gallery-container h1{
    font-family: 'DEATH CROW', sans-serif;
    animation: neon 3s infinite alternate;
    letter-spacing: 2px;
    font-size: 80px;
}

.profile{
    padding:0;
    margin:0;
    border-right: 1px solid rgb(23, 224, 23);
    border-left: 1px solid rgb(23, 224, 23);
    height: 300px;
    background-color: rgba(0, 0, 0, 0.8);
    margin-top: 10px;
}

.profile a{
    color:white;
}

.profile a:hover{
    color:rgb(23, 224, 23);
}

.profile-opacity{
    background-color: rgba(0, 0, 0, 0.4);
    width:100%;
    height:100%;
}

.profile h3{
    padding-top: 10px;
    opacity: 1;
    color:rgb(23, 224, 23);
    font-family: 'DEATH CROW',sans-serif;
}

.uploaded-image-container{
    margin-top:40px;
}

.galleryimg {
    border:none;
    box-shadow: 5px 5px 10px 2px rgb(23, 224, 23);
    height:300px;
    margin-top:0;
    text-align: center;
}

#galleryimghover{
    opacity:0;
    width: 100%;
    height:100%;
    background-color: rgba(0, 0, 0, 0.4);
}

#galleryimghover h3{
    padding-top:60px;
    font-family: 'Sedgwick Ave', cursive;
    color: white;
}

#galleryimghover:hover{
    opacity:1;
}

.edit-form {
    display: none;
}

/* login/signup/password change form css -------------------------------------------------------- */

.login-submit{
    margin-top: 15px;
    background:black;
    color:white;
}

.login-submit > a{
    text-decoration:none;
    color: inherit;
}

.login-submit >a:hover,
.login-submit:hover{
    color:rgb(23, 224, 23)
}

/*Django upload form Styles */

/*Description box in the django form*/
#id_alt{
    width:40%;
}

.gallery-img{
    padding-left:25%;
}

.uploadForm{
    text-align:center;
}

.upload-button,
.delete-button{
    background:black;
    color:white;
}

.upload-button:hover,
.delete-button:hover{
    color:rgba(23, 224, 23);
}

@media screen and (max-width:500px){
    .uploadForm{
        width:auto;
        padding:0;
    }

    input[type="file"] {
            color: transparent;
        }
}

/*-----------------------Individual user pages style-----------------------*/

#artist-gallery-container{
    padding-top: 50px;
}

